minor corrections on widget alignments

--- a/client/src/components/dashboard/main/widgets/_widgets.scss
+++ b/client/src/components/dashboard/main/widgets/_widgets.scss
@@ -2,7 +2,7 @@
   display: grid;
   margin: 0 20px;
   grid-template-columns: 0.6fr 0.4fr 1fr 1fr;
-  grid-template-rows: 0.5fr 0.8fr 1.1fr 0.3fr 0.8fr;
+  grid-template-rows: 0.5fr 0.8fr 1.1fr 0.3fr 0.5fr;
   gap: 20px 20px;
   grid-template-areas:
     "welcome_message welcome_message welcome_message welcome_message"
